added bootsrap ex from class

--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html>
 <head>
   <title>Sam's Sarnies</title>
-
+<link href='dist/css/bootstrap.css' rel='stylesheet'>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+  <div class="container">
   <div class='jumbotron'>
 
-    <h1>Healthy sandwiches for your team</h1>
+    <div class="row">
+      <div class='col-sm-8'>
+        <h1>Healthy sandwiches for your team</h1>
+      </div>
+      <div class='col-sm-4'>
+        <img src='images/sandwich.png'>
+      </div>
+    </div>
 
-    <img src='images/sandwich.png'>
 
     <form role='form'>
       <label for="email">Find out more</label>
@@ -52,6 +60,7 @@
       <button class='btn-pinterest'>Pinterest</button>
     </div>
   </div>
+</div>
 
 
 </body>
