send button added - issue with clsing beak quotes

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <form role='form'>
       <label for="email">Find out more</label>
       <input type="text" name="email" >
-      <button type="submit">Send</button>
+      <button class='btn btn-success'> Send
     </form>
   </div>
 
 <div class="row">
   <div class='col-sm-4'>
     <div id="buzz">
-    <h2><small>The Buzz</small><br />What are people saying?</h2>
+    <h2><blockquote>The Buzz</blockquote><br />What are people saying?</h2>
       <img src='images/person.jpg'>
       <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
       <small>Mr Smith, Professional sandwich taster</small>
@@ -52,9 +52,9 @@
   <div id="mission">
     <h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>
 
-    <p>We believe that healthy workers are more productive workers.</p>
-    <p>Providing your team with a healthy lunch each day improves both motivation and morale.</p>
-    <p>We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
+    <p class="lead">We believe that healthy workers are more productive workers.</p>
+    <p class="lead">Providing your team with a healthy lunch each day improves both motivation and morale.</p>
+    <p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
 
     <div id='social-buttons'>
       <button class='btn-twitter'>Twitter</button>
