--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Sam's Sarnies</title>
 <link href='dist/css/bootstrap.css' rel='stylesheet'>
+<link rel="stylesheet" type="text/css" href="/main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -15,8 +16,9 @@
         <h1>Healthy sandwiches for your team</h1>
       </div>
       <div class='col-sm-4'>
-        <img src='images/sandwich.png'>
-      </div>
+        <div class="center-block">
+        <img src='images/sandwich.png' class="img-responsive" alt="Responsive img">
+        </div>
     </div>
 
 
@@ -31,18 +33,18 @@
   <div class='col-sm-4'>
     <div id="buzz">
     <h2><blockquote>The Buzz</blockquote><br />What are people saying?</h2>
-      <img src='images/person.jpg'>
+      <img src='images/person.jpg' class="img-rounded">
       <p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
       <small>Mr Smith, Professional sandwich taster</small>
   </div>
   </div>
   <div class='col-sm-4'>
-      <img src='images/person.jpg'>
+      <img src='images/person.jpg'class="img-rounded">
       <p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p>
       <small>Miss McAdam, CEO Workplace Analytics</small>
   </div>
   <div class='col-sm-4'>
-      <img src='images/person.jpg'>
+      <img src='images/person.jpg'class="img-rounded">
       <p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
   </div>
 </div>
@@ -57,9 +59,9 @@
     <p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
 
     <div id='social-buttons'>
-      <button class='btn-twitter'>Twitter</button>
-      <button class='btn-facebook'>Facebook</button>
-      <button class='btn-pinterest'>Pinterest</button>
+       <button type="button" class="btn btn-primary btn-lg">Twitter</button>
+        <button type="button" class="btn btn-primary btn-lg">Facebook</button>
+         <button type="button" class="btn btn-primary btn-lg">Pinterest</button>
     </div>
   </div>
 </div>
